# Harness-kdenlive

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude/: settings.local.json
docs/human/: commands.md
docs/llm/: bridge-protocol.md  command-spec.md  error-codes.md  quickstart.md  response-schema.json
src/harness_kdenlive/: __init__.py  __main__.py
src/harness_kdenlive/api/: __init__.py  timeline.py
src/harness_kdenlive/bridge/: __init__.py  client.py  operations.py  server.py
src/harness_kdenlive/cli/: __init__.py  main.py
src/harness_kdenlive/core/: __init__.py  diff_engine.py  models.py  transaction.py  validator.py  xml_engine.py
