[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harnessgg-kdenlive"
version = "0.4.0"
description = "Agent-first harness for editing Kdenlive projects"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "lasdw" }]
keywords = ["kdenlive", "video-editing", "ai-agent", "automation", "mlt"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Video",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "lxml>=4.9.3",
  "typer>=0.12.5"
]

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "pytest>=8.3.0",
  "ruff>=0.8.0",
  "twine>=5.1.1"
]

[project.scripts]
harness-kdenlive = "harness_kdenlive.cli.main:main"

[project.urls]
Homepage = "https://github.com/harnessgg/harness-kdenlive"
Repository = "https://github.com/harnessgg/harness-kdenlive"
Documentation = "https://github.com/harnessgg/harness-kdenlive/tree/main/docs"
Issues = "https://github.com/harnessgg/harness-kdenlive/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
